Updated command execution to a non deprecated function